--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,4 @@
-body{
-    margin: 10px;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: grey;
-}
-
+/*
 .carrito{
     margin-top: 10px;
     border: 1px solid black;
@@ -25,4 +19,188 @@ h3{
     padding: 5px;
     width: 200px;
     border: 1px solid black;
+} 
+
+.images{
+    width: 80px;
+}
+
+.cards{
+    width: 23%;
+    box-shadow: 0 0 4px 3px pink;
+    text-align: center;
+    padding: 1.5em;
+    margin-bottom: 2em;
+}
+
+.title{
+    font-size: 1.3rem;
+}
+.category, .price{
+    font-weight: bold;
+    text-transform: capitalize;
+    margin: 1em;
+    font-size: 1.2rem;
+} */
+
+
+
+
+.card{
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    padding: 5px;
+    width: 300px;
+    border: 1px solid black;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#shopContent{
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-around; */
+}
+
+img{
+    width: 150px;
+}
+
+body{
+    margin: 0;
+}
+
+.nav-container{
+
+    position: sticky;
+    z-index: 3;
+    top:0;
+}
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    height: 12vh;
+    background-color: black;
+}
+
+.navbar-logo{
+    justify-self: start;
+    margin-left: 20px;
+    color: #fff;
+    margin-top: 4vh;
+    cursor: pointer;
+}
+
+.ver-carrito{
+    font-size: 25px;
+    margin-right: 20px;
+    margin-top: 3.5vh;
+    cursor: pointer;
+}
+
+.banner{
+    background-size: cover;
+    background-position: center;
+    height: 20vh;
+    min-height: 200px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+        url("aca falta link");
+}
+
+.banner-container{
+    text-align: center;
+    padding: 30px 0;
+    
+}
+
+.banner h1{
+    margin: 0;
+    color:white;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+    font-size: 62px;
+    font-weight: bold;
+}
+
+.banner p {
+    font-size: 30px;
+    color: white;
+    opacity: 0.7;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+
+.carrito-container{
+    width: 80%;
+    margin: 0 10%;
+    max-height: 80vh;
+    color:#fff;
+    background-color: #121212;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    overflow: auto;
+    z-index: 9;
+    top: 12vh;
+    scrollbar-color: none;
+}
+
+.carrito-container::-webkit-scrollbar{
+    display: none;
+}
+
+.carrito-header{
+    display: flex;
+    
+    justify-content: space-between;
+    background-color: #0a0909;
+    color: #fff;
+    width: 100%;
+}
+
+.carrito-header > h1{
+padding: 0 20px;
+}
+
+
+.carrito-header-button{
+    cursor: pointer;
+}
+
+.carrito-titulo{
+    justify-self: start;
+}
+
+.carrito-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    margin: 10px;
+}
+
+.carrito-container > div > img{
+    height: 120px;
+    width: 120px;
+}
+
+.carrito-container > div > p{
+    padding-left: 5px;
+}
+
+
+.total-content{
+    font-size: 25px;
+    padding: 20px;
+    text-align: center;
+    padding-top: 20px; 
+}
+
+.contenido-carrito{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
